<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_main" />

    <Button android:id="@+id/btn_camera1_1_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_camera1_1_3" />

    <Button
        android:id="@+id/btn_camera2_1_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_camera2_1_3" />

</android.widget.LinearLayout>